# youtube-object-detection

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: push_docker_image.yml  update_cloud_run_service.yml
app/: main.py
app/api/: api.py
app/services/: classifier.py  detector.py
templates/: index.html
terraform/: .terraform.lock.hcl  main.tf  variables.tf
